Update g-coder to now use `/home/gcoder/executions` as the current working directory along with some security fixes

--- a/g-coder/docker-compose.yml
+++ b/g-coder/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./executions:/app/executions
+      - ./executions:/home/gcoder/executions
     environment:
       - FILE_RETENTION_MINUTES=30
     healthcheck:
